--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<nav>
 				<a class="logo-head" href="./index.html"><span class="logo-web">WEB</span>STUDIO</a>
 				<ul class="navigation-links">
-					<li class="nav-link-item"><a href="" class="link">Studio</a></li>
+					<li class="nav-link-item"><a href="" class="link active">Studio</a></li>
 					<li class="nav-link-item"><a href="./portfolio.html" class="link">Portfolio</a></li>
 					<li class="nav-link-item"><a href="" class="link">Contacts</a></li>
 				</ul>
@@ -45,7 +45,7 @@
 			<section class="hero-section">
 				<div class="container">
 				<h1 class="hero-section-title">Effective Solutions <br> for Your Business</h1>
-				<button type="button" class="hero-section-button">Order Service</button>
+				<button type="button" data-modal-open class="hero-section-button">Order Service</button>
 				</div>
                 </section>
 			
@@ -357,5 +357,15 @@
 			</div>
 		</div>
 		</footer>
+		<div class="backdrop is-hidden" data-modal>
+			<div class="modal">
+				<button type="button" data-modal-close class="modal-close">
+					<svg class="" width="8px" height="8px">
+						<use href="./images/icons.svg#icon-cross"></use>
+					</svg>
+				</button>
+			</div>
+		</div>
+		<script src="./js/modal.js"></script>
 	</body>
 </html>
