--- a/portfolio.html
+++ b/portfolio.html
@@ -79,7 +79,7 @@
 							<div class="portfolio-card-item">
 							<a href="" class="portfolios"
 								><img src="./images/portfolio02.jpg" alt="paying terminal with smartphone" width="360" />
-								<p class="portfolio-card-overlay"></p>
+								<p class="portfolio-card-overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
 							</div>
 								<div class="portfolio-sign">
 									<h2 class="portfolio-title">Cashless Payment Marketing</h2>
