--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
 		<div class="backdrop is-hidden" data-modal>
 			<div class="modal">
 				<button type="button" data-modal-close class="modal-close">
-					<svg class="" width="8px" height="8px">
+					<svg class="modal-close-btn-icon" width="8px" height="8px">
 						<use href="./images/icons.svg#icon-cross"></use>
 					</svg>
 				</button>
